# py-codecompanion-workspace

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  codecompanion-workspace.json  pyproject.toml
.cc/: codecompanion.yaml
.cc/data/: CONVENTIONS.md
.cc/static/: codecompanion.md
cc_workspace/: __main__.py  main.py
cc_workspace/data/: CONVENTIONS.md  codecompanion_doc.md
cc_workspace/data/templates/: _ccw_dev.yaml  default.yaml  dev.yaml
cc_workspace/tools/: merge_docs.py
scripts/: bootstrap.sh  check.sh  lint.sh  merge_docs.py  quality.sh  setup_dev_workspace.sh  verify.sh
tests/: test_integration.py  test_main.py  test_tools.py  test_wildcards.py
