[project]
name = "cc-workspace"
dynamic = ["version"]
description = "CodeCompanion workspace generator"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["neovim", "codecompanion", "workspace"]
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
dependencies = [
    "aiofiles>=24.1.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.urls]
homepage = "https://github.com/alexeykarnachev/py-codecompanion-workspace"
repository = "https://github.com/alexeykarnachev/py-codecompanion-workspace"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cc_workspace/__init__.py"

[tool.hatch.build]
include = [
    "cc_workspace/**/*.py",
    "cc_workspace/**/*.md",
    "cc_workspace/data/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["cc_workspace"]

[project.scripts]
ccw = "cc_workspace.main:app"

[tool.hatch.metadata]
allow-direct-references = true

