[project]
name = "cc-workspace"
dynamic = ["version"]
description = "CodeCompanion workspace generator"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["neovim", "codecompanion", "workspace"]
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
dependencies = [
    "aiofiles>=24.1.0",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.9.5",
    "typer>=0.15.1",
    "types-pyyaml>=6.0.12.20241230",
]

[project.urls]
homepage = "https://github.com/alexeykarnachev/py-codecompanion-workspace"
repository = "https://github.com/alexeykarnachev/py-codecompanion-workspace"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cc_workspace/__init__.py"

[tool.hatch.build]
include = [
    "cc_workspace/**/*.py",
    "cc_workspace/**/*.md",
    "cc_workspace/data/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["cc_workspace"]

[project.scripts]
ccw = "cc_workspace.main:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
cc-workspace = { workspace = true }

[dependency-groups]
dev = [
    "cc-workspace",
    "types-aiofiles>=24.1.0.20241221",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async/await test",
]

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["PLR2004"] }
